btn-group flex and put buttons into sets 4this solves issues of wanting to rap in the button beforewrap the group.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,7 @@
   user-select: none;
 }
 
-
+.btn-group{display:flex;}
 
 body { padding-top: 70px;
 overflow-x:hidden; /*shapes cause horiz to appear */
@@ -65,12 +65,15 @@ background: linear-gradient(to top,rgba(222, 225, 228, 0.8), rgba(222, 225, 228,
 
 
 .myCaption {
+
+  text-align: center;
   position: absolute;
       top: 45%;
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: rgba(237,245,67,0.85);
       text-align: center;
+padding:5px 10px;
 }
 .transWhiteBackground{
 background: radial-gradient( rgba(255, 255, 255,0.7),rgba(255, 255, 255,0.5), transparent);/*rgba(247, 247, 247,0.8)*/
